--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "deploy": "cd ./infrastructure && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../"
   },
   "dependencies": {
-    "@emotion/cache": "^11.13.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@mui/material-nextjs": "^6.1.1",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/card": "^2.0.34",
+    "@nextui-org/progress": "^2.0.34",
+    "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.11.1",
@@ -34,8 +30,6 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
     "typescript": "^5"
   }
 }
