--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "cd ./infrastructure && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../"
+    "deploy": "cd ./infrastructure && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
@@ -24,12 +26,17 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5"
   }
 }
