--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "deploy": "cd ./infrastructure && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "migrate": "npm run prisma:migrate",
+    "seed": "npm run prisma:seed",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
@@ -19,6 +23,7 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@prisma/client": "^5.20.0",
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
     "next": "14.2.14",
@@ -30,7 +35,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
-    "@types/node": "^20",
+    "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
@@ -38,6 +43,8 @@
     "eslint-config-next": "14.2.14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5"
+    "prisma": "^5.20.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
