chore: update infrastructure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "cd ./infrastructure && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../",
+    "deploy": "cd ./infrastructure/aws && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../..",
     "test": "jest",
     "test:watch": "jest --watch",
     "migrate": "npm run prisma:migrate",
