--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -31,6 +31,9 @@
     "install": "^0.13.0",
     "next": "14.2.14",
     "npm": "^10.8.3",
+    "pino": "^9.4.0",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^17.2.0"
