--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
     "@prisma/client": "^5.20.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
     "next": "14.2.14",
