--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "migrate": "npm run prisma:migrate",
+    "migrate:local": "npx dotenv -e .env.local -- npm run migrate",
     "seed": "npm run prisma:seed",
+    "seed:local": "npx dotenv -e .env.local -- npm run seed",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
     "stripe:login": "stripe login",
@@ -35,6 +37,7 @@
     "esm": "^3.2.25",
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "npm": "^10.8.3",
     "pino": "^9.4.0",
@@ -48,6 +51,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
