--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATABASE_URL=
 STRIPE_SECRET_KEY=
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SIGNING_SECRET=
+JWT_SECRET=
+
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
