--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.14",
     "npm": "^10.8.3",
     "pino": "^9.4.0",
@@ -52,6 +53,7 @@
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
