--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "seed:local": "npx dotenv -e .env.local -- npm run seed",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
+    "sync": "npm run stripe:sync",
+    "sync:local": "npx dotenv -e .env.local -- npm run sync",
+    "stripe:sync": "npm run stripe:sync:plans && npm run stripe:sync:customers",
+    "stripe:sync:plans": "tsx scripts/sync-stripe-plans.ts",
+    "stripe:sync:customers": "tsx scripts/sync-stripe-customers.ts",
     "stripe:login": "stripe login",
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/v1/stripe/webhook",
     "stripe:trigger:payment_succeeded": "stripe trigger invoice.payment_succeeded"
