--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "esm": "^3.2.25",
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
+    "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.14",
@@ -60,7 +61,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
