--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
