--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/v1/stripe/webhook",
     "stripe:trigger:payment_succeeded": "stripe trigger invoice.payment_succeeded",
     "start:prod": "NODE_ENV=production dotenv -e .env.production -- next start",
-    "build:prod": "NODE_ENV=production dotenv -e .env.production -- next build"
+    "build:prod": "NODE_ENV=production dotenv -e .env.production -- next build",
+    "seed:admin": "tsx prisma/seed-admin.ts",
+    "seed:admin:local": "npx dotenv -e .env.local -- npm run seed:admin"
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
