--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "seed:admin:local": "npx dotenv -e .env.local -- npm run seed:admin"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/rrule": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/input": "^2.2.5",
@@ -57,6 +64,7 @@
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "rrule": "^2.8.1",
     "stripe": "^17.2.0"
   },
   "devDependencies": {
