feat: refactor account teachers add

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@stripe/stripe-js": "^4.8.0",
     "bcrypt": "^5.1.1",
     "esm": "^3.2.25",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.1",
     "install": "^0.13.0",
     "jose": "^5.9.6",
