--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.14",
+    "next": "^14.2.22",
     "npm": "^10.8.3",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
