--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.8.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "esm": "^3.2.25",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.1",
