--- a/package.json
+++ b/package.json
@@ -74,8 +74,9 @@
     "stripe": "^17.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
@@ -88,11 +89,13 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.3",
+    "node-fetch": "^2.7.0",
+    "node-mocks-http": "^1.16.2",
+    "prettier": "^3.4.2",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
