feat: move logic to domain

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@domain/*": ["./domain/*"]
     },
     "baseUrl": "./",
     "noImplicitReturns": true,
