--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.3",
     "rrule": "^2.8.1",
     "stripe": "^17.2.0"
   },
