chore: add destroy command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "deploy": "cd ./infrastructure/aws && npm i && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../..",
+    "destroy": "cd ./infrastructure/aws && npm i && cdk destroy --profile ecole && cd ../..",
     "test": "jest",
     "test:watch": "jest --watch",
     "migrate": "npm run prisma:migrate",
