feat: language match

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
+    "checkup": "npm run format && npm run lint && npm run test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "prettier --write .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "deploy": "cd ./infrastructure/aws && npm i && cdk synth --profile ecole && cdk deploy --profile ecole && cd ../..",
     "destroy": "cd ./infrastructure/aws && npm i && cdk destroy --profile ecole && cd ../..",
     "test": "jest",
