--- a/infrastructure/aws/package.json
+++ b/infrastructure/aws/package.json
@@ -5,15 +5,17 @@
     "infrastructure": "bin/infrastructure.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "esbuild lambda/refresh-booked-classes.ts --bundle --platform=node --target=node18 --outdir=dist",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "postbuild": "mkdir -p dist/.prisma/client && cp -r ../../node_modules/.prisma/client dist/.prisma/client"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
     "aws-cdk": "^2.161.1",
+    "esbuild": "^0.25.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
