--- a/infrastructure/aws/package.json
+++ b/infrastructure/aws/package.json
@@ -5,7 +5,7 @@
     "infrastructure": "bin/infrastructure.js"
   },
   "scripts": {
-    "build": "esbuild lambda/refresh-booked-classes.ts --bundle --platform=node --target=node18 --outdir=dist/lambda",
+    "build": "esbuild lambda/sync.ts --bundle --platform=node --target=node18 --outdir=dist/lambda",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
