--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev | pino-pretty",
     "build": "next build",
     "start": "next start",
-    "checkup": "npm run format && npm run lint && npm run test",
+    "checkup": "npm run format && npm run lint",
+    "checkup:all": "npm run format && npm run lint && npm run test && npm run build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --check .",
