--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL="postgresql://postgres:password@host.docker.internal:5432/ecoleschool"
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SIGNING_SECRET=
 JWT_SECRET=
