fix: teacher's my-classes page

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@host.docker.internal:5432/ecoleschool"
+DATABASE_URL=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SIGNING_SECRET=
 JWT_SECRET=
